# RP2040-HAT-FREERTOS-COREMARK-C

./: CMakeLists.txt  README.md  getting_started.md
examples/: CMakeLists.txt
examples/CoreMark_LWIP/: CMakeLists.txt  CoreMark_LWIP.c  core_main.c  core_main.h
examples/CoreMark_TOE/: CMakeLists.txt  CoreMark_TOE.c  core_portme.c
port/: CMakeLists.txt
port/lwip/: lwipopts.h
